# SpatialSubspaceRotation

./: .gitignore  CMakeLists.txt  LICENSE  README.md
iir/iir/: Biquad.h  Butterworth.h  Cascade.cpp  ChebyshevII.h  Layout.h  State.h
src/: SpatialSubspaceRotation.cpp  SpatialSubspaceRotation.h  main.cpp
